[package]
name = "i2p"
version = "0.0.2"
authors = ["Jack Grigg <str4d@i2pmail.org>"]
description = "I2P client library with a std::net-like API"
homepage = "https://github.com/i2p/i2p-rs"
repository = "https://github.com/i2p/i2p-rs"
readme = "README.md"
categories = ["network-programming"]
keywords = ["i2p", "net", "network", "sam"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "i2p/i2p-rs" }

[dependencies]
data-encoding = "2.1.2"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.3.0"
log = "0.4.6"
nom = "^4.2"
rand = "0.5"
sha2 = "0.8.0"

[dev-dependencies]
env_logger = "0.5"
