[package]
name = "i2p"
version = "0.2.0"
authors = ["Jack Grigg <str4d@i2pmail.org>"]
description = "I2P client library with a std::net-like API"
homepage = "https://github.com/i2p/i2p-rs"
repository = "https://github.com/i2p/i2p-rs"
readme = "README.md"
categories = ["network-programming"]
keywords = ["i2p", "net", "network", "sam"]
license = "MIT"
edition = "2021"

[features]
default = ["public-conn"]
public-conn = []
[badges]
travis-ci = { repository = "i2p/i2p-rs" }

[dependencies.data-encoding]
version = "2"
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.anyhow]
version = "1"
[dependencies.thiserror]
version = "1"
[dependencies.lazy_static]
version = "1"
[dependencies.log]
version = "0.4"
[dependencies.nom]
version = "6"
[dependencies.rand]
version = "0.8"
[dependencies.sha2]
version = "0.10"
[dev-dependencies]
env_logger = "0.5"
