[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2p = {path = "../../", version = "0.2.0"}
env_logger = "0.5"
log = "0.4"
crossbeam = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
tokio = {version = "1.17.0", features = ["full"]}
[[bin]]
name = "hello_world"
path = "src/main.rs"
